--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,9 @@ libs = ["lib"]
 solc_version = '0.8.20'
 optimizer = true
 optimizer_runs = 200
+remappings = [
+    "openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/",
+]
 
 [fuzz]
 runs = 1000
