--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/foundry-rs/forge-std
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
-	url = https://github.com/marsfoundation/aave-v3-coreOpenZeppelin/openzeppelin-contracts
+	url = OpenZeppelin/openzeppelin-contracts
 [submodule "lib/aave-v3-core"]
 	path = lib/aave-v3-core
 	url = https://github.com/marsfoundation/aave-v3-core
