--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,14 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
 
       - name: Run tests
+        env:
+          MAINNET_RPC_URL: ${{secrets.MAINNET_RPC_URL}}
+          OPTIMISM_RPC_URL: ${{secrets.OPTIMISM_RPC_URL}}
+          ARBITRUM_ONE_RPC_URL: ${{secrets.ARBITRUM_ONE_RPC_URL}}
+          ARBITRUM_NOVA_RPC_URL: ${{secrets.ARBITRUM_NOVA_RPC_URL}}
+          GNOSIS_CHAIN_RPC_URL: ${{secrets.GNOSIS_CHAIN_RPC_URL}}
+          BASE_RPC_URL: ${{secrets.BASE_RPC_URL}}
+          GOERLI_RPC_URL: ${{secrets.GOERLI_RPC_URL}}
         run: FOUNDRY_PROFILE=ci forge test
 
   coverage:
